style.css
/* ... */
.popular-articles h2 {
  font-family: "Arial Narrow";
  font-weight: 700;
  color: #a7aab2;
  font-size: 3rem;
  text-align: center;
  text-transform: uppercase;
  padding: 5rem 0;
}

.popular-articles-container {
  max-width: 95%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
}

.popular-articles-item {
  min-height: 5rem;
  display: flex;
  justify-content: center;
}

.popular-articles-item a,
.popular-articles-item a:link,
.popular-articles-item a:visited {
  width: 80%;
  text-decoration: none;
  font-size: 1.7em;
  color: #000;
}

.popular-articles-item a:hover {
  text-decoration: underline rgba(204, 0, 153, 0.33) solid;
}

.popular-articles-item span {
  vertical-align: top;
  width: 15%;
  margin-left: 2rem;
  font-size: 4rem;
  color: #c09;
}

@media screen and (max-width: 1024px) {
  .popular-articles-container {
    grid-template-columns: 1fr;
  }

  .popular-articles-item:not(:last-of-type) {
    margin-bottom: 2rem;
  }
}

/* Latest Stories */

.latest-stories {
  max-width: 95%;
  margin: 0 auto;
  padding: 3rem 5rem;
}

.latest-stories-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 2rem;
}

.latest-stories-heading {
  font-family: "Avalon Bold";
  font-size: 4rem;
  padding: 5rem 0;
}

.latest-stories-items img {
  width: 100%;
  cursor: pointer;
}
.latest-stories-items h3 {
  font-size: 1.6rem;
  padding: 2rem 0;
  cursor: pointer;
}

.latest-stories-items h3:hover {
  text-decoration: underline rgba(204, 0, 153, 0.33) solid;
}

@media screen and (max-width: 1024px) {
  .latest-stories-container {
    grid-template-columns: 1fr 1fr;
  }
}
@media screen and (max-width: 768px) {
  .latest-stories {
    max-width: 100%;
    margin: 0 auto;
    padding: 3rem 0.5rem;
  }

  .latest-stories-heading {
    padding: 5rem 2rem;
  }

  .latest-stories-container {
    grid-template-columns: 1fr;
  }
  .latest-stories-items {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .latest-stories-items img {
    width: 20rem;
    clip-path: circle(30% at 50% 50%);
    margin-left: -3rem;
  }
  .latest-stories-items h3 {
    flex-grow: 2;
    text-align: left;
  }
}

/* Explore channels */
.explore-channels {
  background-color: #f7f8f8;
  min-height: 60vh;
  padding: 5rem 0 7rem;
}
.explore-channels-heading {
  font-family: "Avalon Bold", sans-serif;
  font-size: 4rem;
  max-width: 95%;
  margin: 0 auto;
  padding: 4rem 0 6rem;
}
.explore-channels-container {
  max-width: 95%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(5, minmax(20rem, 1fr));
  gap: 2rem;
  overflow-x: scroll;
}

.explore-channels-container div {
  height: 20rem;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow-x: scroll;
}
.explore-channels div img {
  width: 12rem;
  display: block;
  margin: 3rem auto;
}

.explore-channels div p {
  color: #fff;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.6rem;
  margin-bottom: 2rem;
  padding: 0 2rem;
  text-align: center;
}
.explore-channels-1 {
  background-image: url(/images/channels1.webp);
}

.explore-channels-2 {
  background-image: url(/images/channels2.jpeg);
}

.explore-channels-3 {
  background-image: url(/images/channels3.jpeg);
}
.explore-channels-4 {
  background-image: url(/images/channels4.jpeg);
}
.explore-channels-5 {
  background-image: url(/images/channels5.webp);
}

/* Parralax form  */

.parralax-form {
  padding: 10rem 0 10rem;
  background-image: url(/images/space.png);
  background-size: cover;
  background-attachment: fixed;
  background-position: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.parralax-form h2 {
  font-family: "Avalon Bold", sans-serif;
  font-size: 4.8rem;
  color: #fff;
  text-align: center;
  padding: 1rem 0;
}

.parralax-form p {
  font-size: 1.6rem;
  color: #fff;
  text-align: center;
  padding: 1rem 0;
}

.parralax-form a,
.parralax-form a:visited {
  text-decoration: none;
  color: #0ccc;
}

.parralax-form a:hover {
  color: #fff;
  font-weight: 500;
}

.social-link-image {
  fill: #947fb7;
  height: 2.5rem;
  width: 2.5rem;
  margin: 0 1rem;
}

.social-link-image:hover {
  fill: #fff;
  cursor: pointer;
}

/* Video content section */

.video-content {
  background-color: #f7f8f8;
  padding: 8rem 0 7rem;
}

.video-content h2 {
  font-size: 4rem;
  width: 80%;
  margin: 0 auto 5rem;
}

.video-content-container {
  max-width: 80%;
  margin: 0 auto;
  height: 70rem;
  display: flex;
}

.iframe-container h3 {
  color: #fff;
  font-size: 3rem;
  margin: 3rem 2rem 0.5rem;
}

.iframe-container p {
  color: #a7aab2;
  font-size: 1rem;
  margin: 0.5rem 2rem;
}

.iframe-container {
  height: 60rem;
  height: 100%;
  flex-grow: 2;
  vertical-align: top;
  background-color: #000;
}

.video-iframe {
  height: 80%;
  width: 100%;
}

.related-videos {
  width: 25rem;
  height: 100%;
  margin-left: 2rem;
  overflow-y: scroll;
}

.related-video-item {
  cursor: pointer;
}

.related-video-item:first-child {
  margin-top: -2rem;
}

.related-video-item img {
  clip-path: inset(20px 0px 20px 0px);
  width: 100%;
}

.related-video-item p {
  font-size: 1.6rem;
  font-weight: 500;
  margin: -0.5rem 0 0;
}

@media screen and (max-width: 1024px) {
  .video-content-container {
    max-width: 95%;
  }
  .video-content h2 {
    font-size: 2.8rem;
    text-align: center;
    width: 95%;
    margin: 0 auto 5rem;
  }
}

@media screen and (max-width: 768px) {
  .video-content-container {
    flex-direction: column;
  }

  .iframe-container {
    width: 100%;
    margin-bottom: 3rem;
  }
  .related-videos {
    display: grid;
    grid-template-columns: repeat(10, 30rem);
    gap: 2rem;
    width: 100%;
    margin-left: 0rem;
    overflow-x: scroll;
  }

  .related-video-item img {
    clip-path: inset(30px 0px 30px 0px);
    width: 100%;
  }
  .related-video-item:first-child {
    margin-top: 0rem;
  }
}
/* ... */

